<resources>
    <string name="app_name">Mobile Calculator</string>
    <string name="button_1_text">1</string>
    <string name="button_2_text">2</string>
    <string name="button_3_text">3</string>
    <string name="button_4_text">4</string>
    <string name="button_5_text">5</string>
    <string name="button_6_text">6</string>
    <string name="button_7_text">7</string>
    <string name="button_8_text">8</string>
    <string name="button_9_text">9</string>
    <string name="button_div_text">/</string>
    <string name="button_mul_text">*</string>
    <string name="button_sub_text">-</string>
    <string name="button_dot_text">.</string>
    <string name="button_0_text">0</string>
    <string name="button_back_text">Back</string>
    <string name="button_sum_text">+</string>
    <string name="button_delete_text">AC</string>
    <string name="button_result_text">=</string>
</resources>