<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="@dimen/fragment_calculator_keyboard_weight_sum">

    <TextView
        android:id="@+id/text_expression"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_calculator_keyboard_text_expression_height"
        android:layout_weight="@dimen/fragment_calculator_keyboard_text_expression_weight_sum"
        android:background="@color/black"
        android:ellipsize="start"
        android:gravity="end"
        android:singleLine="true"
        android:textColor="@color/teal_200"
        android:textSize="@dimen/fragment_calculator_keyboard_text_expression_text_size" />


    <TextView
        android:id="@+id/text_result"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_calculator_keyboard_text_result_height"
        android:layout_weight="@dimen/fragment_calculator_keyboard_text_result_weight_sum"
        android:background="@color/black"
        android:ellipsize="end"
        android:gravity="end"
        android:singleLine="true"
        android:textColor="@color/teal_200"
        android:textSize="@dimen/fragment_calculator_keyboard_text_result_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_calculator_keyboard_button_row_height"
        android:layout_weight="@dimen/fragment_calculator_keyboard_button_row_weight"
        android:background="@color/teal_200"
        android:orientation="horizontal"
        android:weightSum="@dimen/fragment_calculator_keyboard_button_row_weight_sum">

        <Button
            style="@style/NumberButton"
            android:id="@+id/button_1"
            android:text="@string/button_1_text">

        </Button>

        <Button
            style="@style/NumberButton"
            android:id="@+id/button_2"
            android:text="@string/button_2_text" />

        <Button
            style="@style/NumberButton"
            android:id="@+id/button_3"
            android:text="@string/button_3_text" />

        <Button
            style="@style/ActionButton"
            android:id="@+id/button_div"
            android:text="@string/button_div_text"
             />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_calculator_keyboard_button_row_height"
        android:layout_weight="@dimen/fragment_calculator_keyboard_button_row_weight"
        android:background="@color/teal_200"
        android:orientation="horizontal"
        android:weightSum="@dimen/fragment_calculator_keyboard_button_row_weight_sum">

        <Button
            style="@style/NumberButton"
            android:id="@+id/button_4"
            android:text="@string/button_4_text" />

        <Button
            style="@style/NumberButton"
            android:id="@+id/button_5"
            android:text="@string/button_5_text" />

        <Button
            style="@style/NumberButton"
            android:id="@+id/button_6"
            android:text="@string/button_6_text" />

        <Button
            style="@style/ActionButton"
            android:id="@+id/button_mul"
            android:text="@string/button_mul_text" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_calculator_keyboard_button_row_height"
        android:layout_weight="@dimen/fragment_calculator_keyboard_button_row_weight"
        android:background="@color/teal_200">

        <Button
            style="@style/NumberButton"
            android:id="@+id/button_7"
            android:text="@string/button_7_text" />

        <Button
            style="@style/NumberButton"
            android:id="@+id/button_8"
            android:text="@string/button_8_text" />

        <Button
            style="@style/NumberButton"
            android:id="@+id/button_9"
            android:text="@string/button_9_text" />

        <Button
            style="@style/ActionButton"
            android:id="@+id/button_sub"
            android:text="@string/button_sub_text" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_calculator_keyboard_button_row_height"
        android:layout_weight="@dimen/fragment_calculator_keyboard_button_row_weight"
        android:background="@color/teal_200">

        <Button
            style="@style/NumberButton"
            android:id="@+id/button_dot"
            android:text="@string/button_dot_text" />

        <Button
            style="@style/NumberButton"
            android:id="@+id/button_0"
            android:text="@string/button_0_text" />

        <Button
            style="@style/NumberButton"
            android:id="@+id/button_back"
            android:text="@string/button_back_text"
            android:textSize="@dimen/fragment_calculator_keyboard_button_back_text_size" />

        <Button
            style="@style/ActionButton"
            android:id="@+id/button_sum"
            android:text="@string/button_sum_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_calculator_keyboard_button_row_height"
        android:layout_weight="@dimen/fragment_calculator_keyboard_button_row_weight"
        android:background="@color/teal_200" >

        <Button
            style="@style/ActionButton"
            android:id="@+id/button_delete"
            android:text="@string/button_delete_text" />

        <Button
            style="@style/ActionButton"
            android:id="@+id/button_result"
            android:text="@string/button_result_text" />

    </LinearLayout>


</LinearLayout>